--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,12 +1,10 @@
 .buttonClass {
 	padding: 10px 20px;
-	background-color: #007bff;
-	color: white;
-	border: none;
-	border-radius: 4px;
+	border-radius: 8px;
+	border: 1px solid transparent;
 	cursor: pointer;
 }
 
 .buttonClass:hover {
-	background-color: #0056b3;
+	border-color: #28282b;
 }
