--- a/src/components/grid/Grid.css
+++ b/src/components/grid/Grid.css
@@ -1,7 +1,3 @@
-.gridWrapper {
-	margin: 20px 20px;
-}
-
 .grid-table {
 	width: 100%;
 	border-collapse: collapse;
@@ -17,4 +13,8 @@
 .grid-table th {
 	background-color: #f4f4f4;
 	font-weight: bold;
+}
+
+.grid-container {
+	overflow-x: auto;
 }
