--- a/src/pages/Initiative/InitiativeScreen.css
+++ b/src/pages/Initiative/InitiativeScreen.css
@@ -5,7 +5,8 @@
 }
 
 .gridWrapper {
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	/* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
+	/* margin-top: 2rem; */
 	gap: 2rem;
-	margin-top: 2rem;
+	margin: 20px 20px;
 }
